--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-click-n-hold": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-icons": "^4.10.1",
