--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^5.3.0",
     "firebase": "^10.1.0",
+    "framer": "^2.3.0",
+    "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-click-n-hold": "^1.0.7",
